--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,13 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "ES2021",
-		"lib": ["ES2021"],
-		"outDir": "out",
-		"rootDir": "src",
-		"sourceMap": true
-	},
-	"include": [
-		"src"
-	],
-	"exclude": [
-		"node_modules",
-		".vscode-test"
-	],
-	"references": [
-		{ "path": "./client" },
-		{ "path": "./server" }
-	]
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "ES2021",
+        "lib": ["ES2021"],
+        "outDir": "out",
+        "rootDir": "src",
+        "sourceMap": true
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", ".vscode-test"],
+    "references": [{ "path": "./client" }, { "path": "./server" }]
 }
