Fix some more lint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     },
     "plugins": ["@typescript-eslint"],
     "rules": {
+        "no-unused-expressions": "error",
         "@typescript-eslint/naming-convention": "off",
         "@typescript-eslint/semi": "warn",
         "curly": "warn",
