--- a/package.json
+++ b/package.json
@@ -579,7 +579,7 @@
 	"scripts": {
 		"vscode:prepublish": "webpack --mode production --devtool hidden-source-map",
 		"clean//": "Remove both the compiled extension and compiled test files",
-		"clean": "rimraf client/dist && rimraf server/dist",
+		"clean": "del-cli client/dist server/dist/*.js*",
 		"compile": "webpack",
 		"compile-cli": "webpack --config webpack.config.cli.js --mode production --devtool hidden-source-map",
 		"eslint": "eslint --fix",
@@ -602,11 +602,11 @@
 		"@vscode/test-electron": "^2.4.1",
 		"@vscode/test-web": "^0.0.56",
 		"@vscode/vsce": "^2.27.0",
+		"del-cli": "^5.1.0",
 		"eslint": "^9.4.0",
 		"globals": "^15.4.0",
 		"mocha": "^10.7.0",
 		"path-browserify": "^1.0.1",
-		"rimraf": "^6.0.1",
 		"sinon": "^18.0.0",
 		"ts-loader": "^9.4.0",
 		"typescript": "^5.3.2",
