Update npm scripts

--- a/package.json
+++ b/package.json
@@ -580,6 +580,7 @@
 		"vscode:prepublish": "webpack --mode production --devtool hidden-source-map",
 		"clean//": "Remove both the compiled extension and compiled test files",
 		"clean": "del-cli client/dist server/dist/*.js*",
+		"compile//": "Compile the extension for packaging and publishing",
 		"compile": "webpack",
 		"compile-cli": "webpack --config webpack.config.cli.js --mode production --devtool hidden-source-map",
 		"eslint": "eslint --fix",
@@ -589,8 +590,10 @@
 		"publish": "vsce publish",
 		"package": "vsce package",
 		"chrome": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=. ./test-data",
-		"compile_test": "cd client && tsc",
-		"pretest": "npm run compile_test",
+		"compile-test//": "Compile test files",
+		"compile-test": "cd client && tsc",
+		"pretest": "npm run compile-test",
+		"test//": "Run tests. Requires the extension to be compiled",
 		"test": "cd client && vscode-test",
 		"validate": "npm run test && npm run package"
 	},
