--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,9 +11,7 @@
 				"--extensionDevelopmentPath=${workspaceFolder}",
 				"--extensionDevelopmentKind=web"
 			],
-			"outFiles": [
-				"${workspaceFolder}/client/dist/**/*.js"
-			],
+			"outFiles": ["${workspaceFolder}/client/dist/**/*.js"],
 			"preLaunchTask": "npm: watch-web"
 		},
 		{
@@ -21,15 +19,11 @@
 			"request": "launch",
 			"name": "Launch Client",
 			"runtimeExecutable": "${execPath}",
-			"args": [
-				"--extensionDevelopmentPath=${workspaceRoot}"
-			],
+			"args": ["--extensionDevelopmentPath=${workspaceRoot}"],
 			"env": {
-				"VSCODE_AHK_SERVER_PATH": "out"
+				"VSCODE_AHK_SERVER_PATH": "dist"
 			},
-			"outFiles": [
-				"${workspaceRoot}/client/dist/**/*.js"
-			],
+			"outFiles": ["${workspaceRoot}/client/dist/**/*.js"],
 			"preLaunchTask": "npm: build:dev"
 		},
 		{
@@ -47,10 +41,7 @@
 	"compounds": [
 		{
 			"name": "Client + Server",
-			"configurations": [
-				"Launch Client",
-				"Attach to Server"
-			]
+			"configurations": ["Launch Client", "Attach to Server"]
 		}
 	]
 }
