Fixup server path

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
 			"runtimeExecutable": "${execPath}",
 			"args": ["--extensionDevelopmentPath=${workspaceRoot}"],
 			"env": {
-				"VSCODE_AHK_SERVER_PATH": "dist"
+				"VSCODE_AHK_SERVER_PATH": "../server/dist/server.js"
 			},
 			"outFiles": ["${workspaceRoot}/client/dist/**/*.js"],
 			"preLaunchTask": "npm: build:dev"
