Format with Prettier 3.3.3

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,18 +6,14 @@
 			"script": "watch-web",
 			"group": "build",
 			"isBackground": true,
-			"problemMatcher": [
-				"$ts-webpack-watch"
-			]
+			"problemMatcher": ["$ts-webpack-watch"]
 		},
 		{
 			"type": "npm",
 			"script": "watch",
 			"group": "build",
 			"isBackground": true,
-			"problemMatcher": [
-				"$tsc-watch"
-			]
+			"problemMatcher": ["$tsc-watch"]
 		}
 	]
 }
