--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
 		"compile-test//": "Compile test files",
 		"compile//": "Compile the extension for packaging and publishing",
 		"eslint": "eslint --fix",
+		"format": "prettier --check .",
+		"format:fix": "prettier --write .",
 		"package": "vsce package",
 		"patch": "npm version patch",
 		"publish": "vsce publish",
@@ -639,6 +641,7 @@
 		"globals": "^15.4.0",
 		"mocha": "^10.7.0",
 		"path-browserify": "^1.0.1",
+		"prettier": "3.3.3",
 		"sinon": "^18.0.0",
 		"sort-package-json": "^2.10.0",
 		"ts-loader": "^9.4.0",
