--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
 		"compile-test": "cd client && tsc",
 		"compile-test//": "Compile test files",
 		"compile//": "Compile the extension for packaging and publishing",
-		"eslint": "eslint --fix",
+		"eslint": "npm run eslint:files -- client server && echo No ESLint problems",
+		"eslint:files": "eslint --max-warnings=0",
+		"eslint:fix": "npm run eslint:files -- src --fix",
 		"format": "prettier --check .",
 		"format:fix": "prettier --write .",
 		"package": "vsce package",
