Simplify production build

--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
 	"main": "./client/dist/extension",
 	"browser": "./client/dist/browserClientMain",
 	"scripts": {
-		"prebuild": "npm run clean",
-		"build": "webpack --mode production --devtool hidden-source-map",
+		"build": "node build.mjs --mode=production",
 		"prebuild:dev": "npm run clean",
 		"build:dev": "webpack",
 		"build:watch": "webpack --watch",
@@ -53,10 +52,11 @@
 		"publish": "vsce publish",
 		"sort-package-json": "sort-package-json --check",
 		"sort-package-json:fix": "sort-package-json",
-		"pretest": "npm run compile-test",
-		"test": "cd client && vscode-test",
+		"test": "npm run test-grammar && npm run test-unit",
 		"test-grammar": "vscode-tmgrammar-snap syntaxes/samples/*.{ahk1,ahk2}",
-		"test//": "Run tests",
+		"pretest-unit": "npm run compile-test",
+		"test-unit": "cd client && vscode-test",
+		"test//": "Run unit tests, not grammar tests",
 		"validate": "npm run clean && npm run test-grammar && npm run test",
 		"vscode:prepublish": "npm run build",
 		"watch": "tsc -b -w"
@@ -639,6 +639,7 @@
 		"@vscode/test-web": "^0.0.56",
 		"@vscode/vsce": "^2.27.0",
 		"del-cli": "^5.1.0",
+		"esbuild": "^0.23.1",
 		"eslint": "^9.4.0",
 		"globals": "^15.4.0",
 		"mocha": "^10.7.0",
