--- a/package.json
+++ b/package.json
@@ -159,7 +159,7 @@
 						"All"
 					],
 					"default": "Disabled",
-					"description": "%ahk2.autolibinclude%"
+					"description": "%ahk2.librarySuggestions%"
 				},
 				"ahk++.CommentTags": {
 					"scope": "window",
