--- a/package.json
+++ b/package.json
@@ -184,7 +184,7 @@
 					},
 					"markdownDescription": "%ahk++.config.v2.debugConfiguration%"
 				},
-				"ahk++.config.v2.diagnostics.classNonDynamicMemberCheck": {
+				"ahk++.v2.diagnostics.classNonDynamicMemberCheck": {
 					"scope": "window",
 					"type": "boolean",
 					"default": true,
@@ -243,9 +243,6 @@
 							"type": "string"
 						}
 					},
-					"additionalProperties": {
-						"type": "string"
-					},
 					"default": {
 						"Class": ".(",
 						"Function": "("
@@ -268,7 +265,7 @@
 					"default": 2,
 					"description": "%ahk2.files.scanmaxdepth%"
 				},
-				"ahk++.FormatOptions": {
+				"ahk++.v2.formatter": {
 					"scope": "window",
 					"type": "object",
 					"properties": {
@@ -366,9 +363,6 @@
 							"type": "number",
 							"default": 0
 						}
-					},
-					"additionalProperties": {
-						"type": "string"
 					},
 					"default": {}
 				},
