--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"singleQuote": true,
 		"tabWidth": 4,
 		"trailingComma": "all",
-		"useTabs": true,
+		"useTabs": false,
 		"overrides": [
 			{
 				"files": [
