Fixup for merging

--- a/package.json
+++ b/package.json
@@ -45,17 +45,14 @@
 		"eslint:fix": "npm run eslint:files -- client server --fix",
 		"format": "prettier --check .",
 		"format:fix": "prettier --write .",
-		"lint": "npm run eslint && npm run sort-package-json",
-		"package": "vsce package",
+		"lint": "npm run format && npm run eslint && npm run sort-package-json",
 		"sort-package-json": "sort-package-json --check",
 		"sort-package-json:fix": "sort-package-json",
-		"test": "npm run test-grammar && npm run test-unit",
-		"test-grammar": "vscode-tmgrammar-snap syntaxes/samples/*.{ahk1,ahk2}",
+		"test": "npm run test-unit",
 		"pretest-unit": "npm run compile-ts",
 		"test-unit": "cd client && vscode-test",
 		"test//": "Run unit tests, not grammar tests",
-		"validate": "npm run lint && npm run test && npm run package",
-		"vscode:prepublish": "npm run build:old",
+		"validate": "npm run lint && npm run test",
 		"watch": "tsc -b -w"
 	},
 	"prettier": {
@@ -89,13 +86,11 @@
 		"@vscode/test-cli": "^0.0.10",
 		"@vscode/test-electron": "^2.4.1",
 		"@vscode/test-web": "^0.0.56",
-		"@vscode/vsce": "^3.0.0",
 		"del-cli": "^5.1.0",
 		"esbuild": "^0.23.1",
 		"eslint": "^9.4.0",
 		"globals": "^15.4.0",
 		"mocha": "^10.7.0",
-		"path-browserify": "^1.0.1",
 		"prettier": "3.3.3",
 		"sinon": "^18.0.0",
 		"sort-package-json": "^2.10.0",
